# palladium

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-manjaro.yml
docs/: syntax.md  syntax_concept_01.md  visitor-design.md  vm-opt-code.md
include/: ArrayInitializationNode.h  AstNode.h  BinaryExpressionNode.h  Codegeneration.h  ConditionNode.h  ConstantDeclarationNode.h  ExpressionNode.h  FunctionNode.h  Instruction.h  Lexer.h  LexerStream.h  LoopNode.h  Parser.h  ReturnStatementNode.h  StatementNode.h  StatementsNode.h  TranslationUnitNode.h  TypeNode.h  Util.h  VMMemory.h  VMPolicy.h  VMType.h  VariableDeclarationNode.h  VirtualMachine.h  Visitor.h  Vistor.h
include/ast/: ArrayInitializationNode.h  BinaryExpressionNode.h  ConditionNode.h  ConstantDeclarationNode.h  ExpressionNode.h  LoopNode.h  OperatorNode.h  ReturnStatementNode.h  StatementNode.h  StatementsNode.h  TranslationUnitNode.h  VariableDeclarationNode.h
man/: palladium_vm.7
src/: ArrayInitializationNode.cpp  BinaryExpressionNode.cpp  CMakeLists.txt  Codegeneration.cpp  ConditionNode.cpp  ConstantDeclarationNode.cpp  ExpressionNode.cpp  FunctionNode.cpp  Instruction.cpp  Lexer.cpp  LexerStream.cpp  LoopNode.cpp  OperatorNode.cpp  Parser.cpp  ReturnStatementNode.cpp  StatementNode.cpp  StatementsNode.cpp  TranslationUnitNode.cpp  TypeNode.cpp  Util.cpp  VMStruct.cpp  VMType.cpp  VariableDeclarationNode.cpp  main.cpp
src/ast/: BinaryExpressionNode.cpp  CMakeLists.txt  ConstantDeclarationNode.cpp  FunctionNode.cpp  StatementNode.cpp  StatementsNode.cpp  TypeNode.cpp  VariableDeclarationNode.cpp
src/pasm/: pasm.cpp
tests/: CMakeLists.txt  LexerTest  LexerTest.cpp  ParserTest.cpp  TokenKindTest  TokenKindTest.cpp  VMMemoryTest.cpp  VisitorTest.cpp
tests/pasm_tests/: syntax_failed1.pasm  syntax_failed2.pasm  syntax_failed3.pasm  syntax_test.pasm
toolchain/: cleanup.sh  copy_to_one_file.sh  executable_tester.py  generate_ast_node.sh  reduce.sh
